--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,6 +1,5 @@
 @media (min-width: 35rem) {
-    main {
-        display: block;
-    }
-   
+    nav ul#primaryNav {
+            display: flex;
+        }
 }
